# ifconfig-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  Readme.md  Rocket.toml  build.rs  deny.toml  docker-compose.yml  ifconfig.dev.toml  ifconfig.example.toml  ifconfig.prod.toml  ifconfig.toml
.github/workflows/: ci.yml  deploy.yml  docker-prod-image.yml  release.yml
benches/: asn_heuristic.rs  cloud_lookup.rs  negotiation.rs  serialization.rs
data/: .gitignore  Dockerfile  Makefile  README.md  asn_patterns.toml  cins_army_ips.txt  geoipupdate.conf.example
docs/: crucible-sdd.md  data-sources.md  enrichment.md  notes.md  review.md  roadmap.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.tsx  test-setup.ts
frontend/src/components/: ApiExplorer.test.tsx  ApiExplorer.tsx  Faq.tsx  InfoCards.tsx  IpDisplay.tsx  IpLookupForm.tsx  RequestHeaders.tsx  SuiteNav.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  toast.ts  types.ts
frontend/src/styles/: global.css
specs/sdd/: rename-ifconfig-rs-to-iris.md  rename-ifconfig-rs-to-iris.refined.md
src/: config.rs  enrichment.rs  error.rs  extractors.rs  fairings.rs  format.rs  guards.rs  handlers.rs  lib.rs  main.rs  middleware.rs  negotiate.rs  rate_limiter.rs  routes.rs  scalar_docs.html  state.rs
src/backend/: asn_heuristic.rs  asn_info.rs  bot.rs  cins.rs  cloud_provider.rs  datacenter.rs  feodo.rs  iana.rs  mod.rs  spamhaus.rs  user_agent.rs  vpn.rs
templates/: index.html.hbs
tests/: Dockerfile.tests  admin.rs  error_handler.rs  etag_last_modified.rs  ok_handlers.rs  rate_limit.rs  rate_limiter.rs  snapshots_test.rs
tests/e2e/: package-lock.json  package.json  playwright.config.ts
tests/e2e/tests/: acceptance.spec.ts
tests/fixtures/: full_response.json
tests/snapshots/: snapshots_test__csv_serialization_snapshot.snap  snapshots_test__csv_serialization_vpn_snapshot.snap  snapshots_test__json_serialization_bot_snapshot.snap  snapshots_test__json_serialization_snapshot.snap  snapshots_test__json_serialization_vpn_snapshot.snap  snapshots_test__toml_serialization_snapshot.snap  snapshots_test__yaml_serialization_snapshot.snap
