[package]
name = "ifconfig-rs"
version = "0.4.1"
authors = ["Lukas Pustina <lukas@pustina.net>"]

description = "Yet another ifconfig / what's my IP service"
repository = "https://github.com/lukaspustina/ifconfig-rs"
readme = "Readme.md"
license = "MIT"
keywords = ["ifconfig", "ip", "network", "webservice"]
include = [
  "Readme.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
  "build.rs",
  "ifconfig.example.toml",
  "ifconfig.dev.toml",
  "frontend/dist/**",
]
edition = "2021"

[[bin]]
name = "ifconfig-rs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
config = "0.15"
hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }
governor = "0.8"
maxminddb = "0.27"
mime_guess = "2"
regex = "1"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uaparser = "0.6"

[dev-dependencies]
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
pretty_assertions = "1.4.0"
tower = { version = "0.5", features = ["util"] }
