[package]
name = "ifconfig-rs"
version = "0.6.0"
authors = ["Lukas Pustina <lukas@pustina.net>"]

description = "Yet another ifconfig / what's my IP service"
repository = "https://github.com/lukaspustina/ifconfig-rs"
readme = "Readme.md"
license = "MIT"
keywords = ["ifconfig", "ip", "network", "webservice"]
include = [
  "Readme.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
  "build.rs",
  "ifconfig.example.toml",
  "ifconfig.dev.toml",
  "frontend/dist/**",
]
edition = "2021"

[[bin]]
name = "ifconfig-rs"
path = "src/main.rs"

[dependencies]
arc-swap = "1"
axum = { version = "0.8", features = ["json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
metrics-exporter-prometheus = "0.16"
config = "0.15"
mhost = { version = "0.11", default-features = false }
governor = "0.8"
httpdate = "1"
ip_network = "0.4"
ip_network_table = "0.2"
maxminddb = "0.27"
metrics-process = "2.3"
mime_guess = "2"
regex = "1"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uaparser = "0.6"
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
pretty_assertions = "1.4.0"
tower = { version = "0.5", features = ["util"] }
